--- a/css/main.css
+++ b/css/main.css
@@ -651,6 +651,8 @@
 					padding: 2%;
 					background-color: #eaf2f8;
 					height: auto;
+					border-radius: 5px;
+					margin: 1em;
 				}
 				.places {
 					width: 25%;
@@ -660,6 +662,8 @@
 					padding: 2%;
 					background-color: #eaf2f8;
 					height: auto;
+					border-radius: 5px;
+					margin-right: 1em;
 				}
 				.about {
 					width: 25%;
