--- a/css/main.css
+++ b/css/main.css
@@ -748,7 +748,7 @@
 				display: none;
 				position: absolute;
 				background-color: #f9f9f9;
-				min-width: 6.2em;
+				width: 8.5em;
 				box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 				z-index: 1;
 			}
@@ -771,6 +771,7 @@
 			.dropdown-content a:hover {
 				background-color: #ddd;
 				color: black;
+				width: auto;
 			}
 			
 			.dropdown:hover .dropdown-content {
