--- a/css/main.css
+++ b/css/main.css
@@ -748,7 +748,7 @@
 				display: none;
 				position: absolute;
 				background-color: #f9f9f9;
-				width: 8.5em;
+				min-width: 8.5em;
 				box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 				z-index: 1;
 			}
@@ -766,16 +766,19 @@
 			.dropdown:hover .dropbtn {
 				background-color: #04426a;
 				color: white;
+				transition: all 0.5s ease-out;
 			}
 			
 			.dropdown-content a:hover {
 				background-color: #ddd;
 				color: black;
 				width: auto;
+				transition: all 0.5s ease-out;
 			}
 			
 			.dropdown:hover .dropdown-content {
 				display: block;
+				transition: all 0.5s ease-out;
 			}
 			
 			@media screen and (max-width: 690px) {
@@ -799,6 +802,8 @@
 					float: none;
 					display: block;
 					text-align: left;
+					width: 100%;
+					transition: all 0.5s ease-out;
 				}
 				.topnav.responsive .dropdown {
 					float: none;
@@ -810,5 +815,6 @@
 					display: block;
 					width: 100%;
 					text-align: left;
+					transition: all 0.5s ease-out;
 				}
 			}
